--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "mandisa",
   "version": "0.0.0",
+
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
+
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
